--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.2.15",
     "@angular/common": "^7.2.15",
     "@angular/compiler": "^7.2.15",
     "@angular/core": "^7.2.15",
@@ -20,31 +21,43 @@
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
+    "@nebular/auth": "^3.5.0",
+    "@nebular/security": "^3.5.0",
+    "@nebular/theme": "^3.5.0",
+    "acorn": "^6.1.1",
+    "ajv": "^6.10.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.9",
+    "core.js": "^0.4.2",
+    "jquery": "^3.4.1",
+    "nebular-icons": "^1.1.0",
     "nyc": "^14.1.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.5.2",
-    "zone.js": "~0.8.26"
+    "zone": "^0.3.4",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.9",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "^7.2.15",
-    "@types/jasmine": "~2.8.8",
+    "@schematics/angular": "^7.2.15",
+    "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "~12.0.2",
+    "codelyzer": "~5.0.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "ts-node": "~8.2.0",
+    "tslint": "~5.16.0",
     "typescript": "^3.2.4"
   }
 }
