--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test vision360 --watch=false --browsers=ChromeHeadless",
+    "test-debug": "ng test vision360 --watch=true --browsers=Chrome",
+    "test-coverage": "ng test vision360 --watch=false --browsers=ChromeHeadless --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -55,6 +57,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-sonarqube-unit-reporter": "0.0.15",
     "protractor": "~5.4.0",
     "ts-node": "~8.2.0",
     "tslint": "~5.16.0",
