--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build vision360",
+    "build-dev": "ng build vision360 --output-path=./dist/vision360",
+    "build-prod": "ng build vision360 --prod",
     "test": "ng test vision360 --watch=false --browsers=ChromeHeadless",
     "test-debug": "ng test vision360 --watch=true --browsers=Chrome",
     "test-coverage": "ng test vision360 --watch=false --browsers=ChromeHeadless --code-coverage",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test-coverage-ci": "ng test vision360 --watch=false --browsers=Chrome_CI --code-coverage",
+    "lint": "ng lint vision360",
+    "e2e": "ng e2e --dev-server-target"
   },
   "private": true,
   "dependencies": {
