--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,23 @@
 image: docker:latest
 services:
-  - docker:dind
+    - docker:dind
 
 variables:
-  REGISTRY_GITLAB: registry.gitlab.com/wickhamit/angular/vision-360
-  TEST_IMAGE: $REGISTRY_GITLAB:$CI_COMMIT_REF_NAME
-  RELEASE_IMAGE: $REGISTRY_GITLAB:latest
+    REGISTRY_GITLAB: registry.gitlab.com/wickhamit/angular/vision-360
+    TEST_IMAGE: $REGISTRY_GITLAB:$CI_COMMIT_REF_NAME
+    RELEASE_IMAGE: $REGISTRY_GITLAB:latest
 
 #============================#
 #     Stages definition
 #============================#
 stages:
-  - Building
-  - Linting
-  - Testing
-  - Release
+    - Building
+    - Linting
+    - Testing
+    - Release
 
 before_script:
-  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
 #============================#
 #     Jobs Section
@@ -26,49 +26,53 @@ before_script:
 # Stage: Build               #
 #............................#
 Build:
-  stage: Building
-  script:
-    - echo 'Build in progress ...'
-    - docker build --pull -t $TEST_IMAGE .
-    - docker push $TEST_IMAGE
-  allow_failure: false
-  tags:
-    - docker
+    stage: Building
+    script:
+        - echo 'Build in progress ...'
+        - docker build --pull -t $TEST_IMAGE .
+        - docker push $TEST_IMAGE
+    allow_failure: false
+    tags:
+        - docker
 
 #............................#
 # Stage: Lint                #
 #............................#
 Lint:
-  stage: Linting
-  script:
-    - echo 'Lint in progress ...'
-    - docker pull $TEST_IMAGE
-    - docker run $TEST_IMAGE npm run lint
-  allow_failure: false
-  tags:
-    - docker
+    stage: Linting
+    script:
+        - echo 'Lint in progress ...'
+        - docker pull $TEST_IMAGE
+        - docker run $TEST_IMAGE npm run lint
+    allow_failure: false
+    tags:
+        - docker
 
 #............................#
 # Stage: Test                #
 #............................#
 Test:
-  stage: Testing
-  script:
-    - echo 'Test in progress ...'
-    - docker pull $TEST_IMAGE
-    - docker run $TEST_IMAGE npm run test-coverage-ci
-  allow_failure: false
-  tags:
-    - docker
+    stage: Testing
+    script:
+        - echo 'Test in progress ...'
+        - docker pull $TEST_IMAGE
+        - docker run $TEST_IMAGE npm run test-coverage
+    allow_failure: false
+    tags:
+        - docker
+    only:
+        - develop
 
 #............................#
 # Stage: Release             #
 #............................#
 Release:
-  stage: Release
-  script:
-    - docker pull $TEST_IMAGE
-    - docker tag $TEST_IMAGE $RELEASE_IMAGE
-    - docker push $RELEASE_IMAGE
-  only:
-    - master
+    stage: Release
+    script:
+        - docker pull $TEST_IMAGE
+        - docker tag $TEST_IMAGE $RELEASE_IMAGE
+        - docker push $RELEASE_IMAGE
+    tags:
+        - docker
+    only:
+        - master
