--- a/package.json
+++ b/package.json
@@ -1,69 +1,105 @@
 {
-  "name": "vision360",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build vision360",
-    "build-dev": "ng build vision360 --output-path=./dist/vision360",
-    "build-prod": "ng build vision360 --prod",
-    "test": "ng test vision360 --watch=false --browsers=ChromeHeadless",
-    "test-debug": "ng test vision360 --watch=true --browsers=Chrome",
-    "test-coverage": "ng test vision360 --watch=false --browsers=ChromeHeadless --code-coverage",
-    "test-coverage-ci": "ng test vision360 --watch=false --browsers=Chrome_CI --code-coverage",
-    "lint": "ng lint vision360",
-    "e2e": "ng e2e --dev-server-target"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.2.15",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
-    "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
-    "@nebular/auth": "^3.5.0",
-    "@nebular/security": "^3.5.0",
-    "@nebular/theme": "^3.5.0",
-    "acorn": "^6.1.1",
-    "ajv": "^6.10.0",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.9",
-    "core.js": "^0.4.2",
-    "jquery": "^3.4.1",
-    "nebular-icons": "^1.1.0",
-    "nyc": "^14.1.1",
-    "popper": "^1.0.1",
-    "popper.js": "^1.15.0",
-    "rxjs": "~6.5.2",
-    "zone": "^0.3.4",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.15",
-    "@schematics/angular": "^7.2.15",
-    "@types/jasmine": "~3.3.12",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.0.2",
-    "codelyzer": "~5.0.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "karma-sonarqube-unit-reporter": "0.0.15",
-    "protractor": "~5.4.0",
-    "ts-node": "~8.2.0",
-    "tslint": "~5.16.0",
-    "typescript": "^3.2.4"
-  }
+	"name": "vision360",
+	"version": "0.0.1",
+	"private": true,
+	"cacheDirectories": [
+		"node_modules"
+	],
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build vision360",
+		"build-dev": "ng build vision360 --output-path=./dist/vision360",
+		"build-prod": "ng build vision360 --prod",
+		"test": "ng test vision360 --watch=false",
+		"test-debug": "ng test vision360 --watch=true",
+		"test-coverage": "ng test vision360 --watch=false --coverage",
+		"prettier": "pretty-quick --staged",
+		"precommit": "run-s prettier lint",
+		"lint": "ng lint vision360",
+		"e2e": "ng e2e --dev-server-target"
+	},
+	"dependencies": {
+		"@angular/animations": "^7.2.15",
+		"@angular/common": "^7.2.15",
+		"@angular/compiler": "^7.2.15",
+		"@angular/core": "^7.2.15",
+		"@angular/forms": "^7.2.15",
+		"@angular/http": "^7.2.15",
+		"@angular/platform-browser": "^7.2.15",
+		"@angular/platform-browser-dynamic": "^7.2.15",
+		"@angular/router": "^7.2.15",
+		"@nebular/auth": "^3.5.0",
+		"@nebular/security": "^3.5.0",
+		"@nebular/theme": "^3.5.0",
+		"@ng-bootstrap/ng-bootstrap": "^4.2.0",
+		"@ngx-translate/core": "^11.0.1",
+		"@ngx-translate/http-loader": "^4.0.0",
+		"bootstrap": "^4.3.1",
+		"core-js": "^2.6.9",
+		"nebular-icons": "^1.1.0",
+		"ngx-cookie": "^4.0.2",
+		"ngx-toastr": "^10.0.4",
+		"ngx-webstorage": "^4.0.0",
+		"popper.js": "^1.15.0",
+		"rxjs": "~6.5.2",
+		"zone.js": "^0.8.26"
+	},
+	"devDependencies": {
+		"@angular-builders/jest": "^8.0.1",
+		"@angular-devkit/architect": "^0.800.1",
+		"@angular-devkit/build-angular": "^0.800.1",
+		"@angular/cdk": "^7.3.7",
+		"@angular/cli": "~8.0.0",
+		"@angular/compiler-cli": "^8.0.0",
+		"@angular/language-service": "^8.0.0",
+		"@schematics/angular": "^8.0.0",
+		"@types/chai": "^4.1.7",
+		"@types/dirty-chai": "^2.0.0",
+		"@types/jest": "^24.0.13",
+		"@types/node": "~12.0.2",
+		"@types/sinon": "^7.0.12",
+		"chai": "^4.2.0",
+		"codelyzer": "~5.0.1",
+		"dirty-chai": "^2.0.1",
+		"husky": "^2.3.0",
+		"jest": "^24.8.0",
+		"jest-cli": "^24.8.0",
+		"jest-junit": "^6.4.0",
+		"jest-preset-angular": "^7.1.1",
+		"jest-sonar-reporter": "^2.0.0",
+		"jquery": "^3.4.1",
+		"lint-staged": "^8.1.7",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^1.17.1",
+		"pretty-quick": "^1.11.0",
+		"protractor": "~5.4.0",
+		"puppeteer": "^1.17.0",
+		"rxjs-tslint-rules": "^4.23.2",
+		"sinon": "^7.3.2",
+		"sinon-chai": "^3.3.0",
+		"ts-jest": "^24.0.2",
+		"ts-node": "~8.2.0",
+		"tslib": "^1.9.3",
+		"tslint": "^5.17.0",
+		"tslint-config-prettier": "^1.18.0",
+		"tslint-consistent-codestyle": "^1.15.1",
+		"tslint-eslint-rules": "^5.4.0",
+		"tslint-plugin-prettier": "^2.0.1",
+		"tslint-sonarts": "^1.9.0",
+		"tsutils": "^3.0.0",
+		"typescript": "^3.4.5",
+		"vrsource-tslint-rules": "^6.0.0"
+	},
+	"lint-staged": {
+		"{,src/**/}*.{md,json,ts,css,scss,yml}": [
+			"prettier --write",
+			"git add"
+		]
+	},
+	"jestSonar": {
+		"reportPath": "./testing/",
+		"reportFile": "sonar-report.xml",
+		"indent": 4
+	}
 }
