--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"test-debug": "ng test vision360 --watch=true",
 		"test-coverage": "ng test vision360 --watch=false --coverage",
 		"prettier": "pretty-quick --staged",
-		"precommit": "run-s prettier lint",
+		"precommit": "run-s prettier lint test",
 		"lint": "ng lint vision360",
 		"e2e": "ng e2e --dev-server-target"
 	},
