--- a/package.json
+++ b/package.json
@@ -20,36 +20,41 @@
 		"e2e": "ng e2e --dev-server-target"
 	},
 	"dependencies": {
-		"@angular/animations": "^7.2.15",
-		"@angular/common": "^7.2.15",
-		"@angular/compiler": "^7.2.15",
-		"@angular/core": "^7.2.15",
-		"@angular/forms": "^7.2.15",
+		"@angular/animations": "^8.0.0",
+		"@angular/common": "^8.0.0",
+		"@angular/compiler": "^8.0.0",
+		"@angular/core": "^8.0.0",
+		"@angular/flex-layout": "^8.0.0-beta.26",
+		"@angular/forms": "^8.0.0",
 		"@angular/http": "^7.2.15",
-		"@angular/platform-browser": "^7.2.15",
-		"@angular/platform-browser-dynamic": "^7.2.15",
-		"@angular/router": "^7.2.15",
-		"@nebular/auth": "^3.5.0",
-		"@nebular/security": "^3.5.0",
-		"@nebular/theme": "^3.5.0",
+		"@angular/platform-browser": "^8.0.0",
+		"@angular/platform-browser-dynamic": "^8.0.0",
+		"@angular/router": "^8.0.0",
+		"@nebular/auth": "^4.0.0-rc.7",
+		"@nebular/security": "^4.0.0-rc.7",
+		"@nebular/theme": "^4.0.0-rc.7",
 		"@ng-bootstrap/ng-bootstrap": "^4.2.0",
 		"@ngx-translate/core": "^11.0.1",
 		"@ngx-translate/http-loader": "^4.0.0",
 		"bootstrap": "^4.3.1",
 		"core-js": "^2.6.9",
 		"nebular-icons": "^1.1.0",
+		"ng2-completer": "^2.0.8",
+		"ng2-smart-table": "^1.4.0",
 		"ngx-cookie": "^4.0.2",
 		"ngx-toastr": "^10.0.4",
 		"ngx-webstorage": "^4.0.0",
+		"node": "^12.3.1",
 		"popper.js": "^1.15.0",
 		"rxjs": "~6.5.2",
-		"zone.js": "^0.8.26"
+		"rxjs-compat": "^6.5.2",
+		"zone.js": "^0.9.1"
 	},
 	"devDependencies": {
 		"@angular-builders/jest": "^8.0.1",
 		"@angular-devkit/architect": "^0.800.1",
 		"@angular-devkit/build-angular": "^0.800.1",
-		"@angular/cdk": "^7.3.7",
+		"@angular/cdk": "^8.0.0",
 		"@angular/cli": "~8.0.0",
 		"@angular/compiler-cli": "^8.0.0",
 		"@angular/language-service": "^8.0.0",
