--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"@angular/router": "^8.0.0",
 		"@nebular/auth": "^4.0.0-rc.7",
 		"@nebular/security": "^4.0.0-rc.7",
-		"@nebular/theme": "^4.0.0-rc.7",
+		"@nebular/theme": "^4.0.0",
 		"@ng-bootstrap/ng-bootstrap": "^4.2.0",
 		"@ngx-translate/core": "^11.0.1",
 		"@ngx-translate/http-loader": "^4.0.0",
