--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
 		"@ngx-translate/core": "^11.0.1",
 		"@ngx-translate/http-loader": "^4.0.0",
 		"bootstrap": "^4.3.1",
+		"chart.js": "^2.8.0",
 		"core-js": "^2.6.9",
 		"nebular-icons": "^1.1.0",
+		"ng2-charts": "^2.3.0",
 		"ng2-completer": "^2.0.8",
 		"ng2-smart-table": "^1.4.0",
 		"ngx-cookie": "^4.0.2",
