--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"test-debug": "ng test vision360 --watch=true",
 		"test-coverage": "ng test vision360 --watch=false --coverage",
 		"prettier": "pretty-quick --staged",
-		"precommit": "",
+		"precommit": "run-s prettier lint test",
 		"lint": "ng lint vision360",
 		"e2e": "ng e2e --dev-server-target"
 	},
@@ -78,7 +78,7 @@
 		"jest-sonar-reporter": "^2.0.0",
 		"jquery": "^3.4.1",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^1.17.1",
+		"prettier": "^1.18.0",
 		"pretty-quick": "^1.11.0",
 		"protractor": "~5.4.0",
 		"puppeteer": "^1.17.0",
