--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
 						"polyfills": "src/bootstrap/scripts/polyfills.ts",
 						"tsConfig": "src/bootstrap/configuration/tsconfig.app.json",
 						"assets": ["src/assets"],
-						"styles": ["src/bootstrap/styles/main.scss"],
+						"styles": ["src/bootstrap/styles/main.scss", "node_modules/font-awesome/css/font-awesome.css"],
 						"scripts": []
 					},
 					"configurations": {
